[gd_scene load_steps=5 format=3 uid="uid://c1ipgkdm40l6c"]

[ext_resource type="Theme" uid="uid://ddjoduj1ya6tp" path="res://assets/5PFH.tres" id="1_23rvc"]
[ext_resource type="Script" path="res://Resources/UI/Screens/CampaignSetupScreen.gd" id="1_sapom"]
[ext_resource type="Texture2D" uid="uid://cb3wc2cq0m72j" path="res://assets/BookImages/Dec_9_Gambling_Hall.jpg" id="3_mupwv"]
[ext_resource type="PackedScene" uid="uid://dp66b6flafme3" path="res://Resources/CampaignManagement/Scenes/VictoryConditionSelection.tscn" id="3_victory"]

[node name="CampaignSetupScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_23rvc")
script = ExtResource("1_sapom")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mupwv")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Campaign Setup"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="CrewNameContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewNameContainer"]
layout_mode = 2
text = "Crew Name"

[node name="CrewNameInput" type="LineEdit" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewNameContainer"]
layout_mode = 2
placeholder_text = "Enter crew name..."

[node name="CrewSizeContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
text = "Crew Size"

[node name="CrewSizeOption" type="OptionButton" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2

[node name="CrewSizeDescription" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Affects enemy numbers in battle"
horizontal_alignment = 1

[node name="DifficultyContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/DifficultyContainer"]
layout_mode = 2
text = "Difficulty"

[node name="DifficultyOption" type="OptionButton" parent="HBoxContainer/LeftPanel/VBoxContainer/DifficultyContainer"]
layout_mode = 2

[node name="DifficultyDescription" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/DifficultyContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Affects various game mechanics"
autowrap_mode = 3

[node name="VictoryContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/VictoryContainer"]
layout_mode = 2
text = "Victory Condition"

[node name="VictoryOption" type="OptionButton" parent="HBoxContainer/LeftPanel/VBoxContainer/VictoryContainer"]
layout_mode = 2

[node name="VictoryDescription" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/VictoryContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Select a victory condition"
autowrap_mode = 3

[node name="StoryTrackContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/StoryTrackContainer"]
layout_mode = 2
text = "Story Track"

[node name="StoryTrackToggle" type="CheckButton" parent="HBoxContainer/LeftPanel/VBoxContainer/StoryTrackContainer"]
layout_mode = 2
text = "Enable Story Track"

[node name="StoryTrackDescription" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/StoryTrackContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Adds narrative events to your campaign"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="StartCampaignButton" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Start Campaign"

[node name="RightPanel" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/RightPanel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/RightPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightPanel/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Campaign Summary"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SummaryLabel" type="Label" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Configure your campaign settings"
autowrap_mode = 3

[connection signal="text_changed" from="HBoxContainer/LeftPanel/VBoxContainer/CrewNameContainer/CrewNameInput" to="." method="_on_crew_name_input_text_changed"]
[connection signal="item_selected" from="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer/CrewSizeOption" to="." method="_on_crew_size_changed"]
[connection signal="item_selected" from="HBoxContainer/LeftPanel/VBoxContainer/DifficultyContainer/DifficultyOption" to="." method="_on_difficulty_option_button_item_selected"]
[connection signal="item_selected" from="HBoxContainer/LeftPanel/VBoxContainer/VictoryContainer/VictoryOption" to="." method="_on_victory_condition_selected"]
[connection signal="toggled" from="HBoxContainer/LeftPanel/VBoxContainer/StoryTrackContainer/StoryTrackToggle" to="." method="_on_story_track_toggled"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/StartCampaignButton" to="." method="_on_start_campaign_button_pressed"]
